# harbor

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  todo.md
.grimoire/: CONTEXT.md
.grimoire/adr/: 0001-widget-crate-separation.md  0002-signal-pull-model.md  0003-widget-independent-pipeline.md  0004-widget-dependency-boundary.md  0005-custom-paint-provider-by-id.md  0006-custom-paint-input-provider.md  0007-retain-separate-paste-confirmation-window.md  0008-widget-runtime-for-confirmation-window.md  0009-app-cross-window-input-gate.md
.grimoire/plans/: 0001-phase0-widget-core.html  0002-phase1-layout-scene-quad-renderer.html  0003-phase2-input-focus-modal.html  0004-shared-text-foundation.html
.grimoire/spec/: 0001-phase-3-widget-runtime-integration.md  0001-retained-tree-pure-cpu-core.md
.grimoire/ticket/0001-phase-3-widget-runtime-integration/: README.md  T0001-shared-text-foundation.md  T0002-terminal-custom-paint.md  T0003-native-cancellation-window.md  T0004-safe-paste-confirmation.md  T0005-preview-and-dpi-completion.md
.grimoire/ticket/0001-retained-tree-pure-cpu-core/: README.md  T0001-crate-and-core-types.md  T0002-reconciliation-and-reactivity.md  T0003-geometry-and-constraints.md
.omp/: mcp.json
.scratch/paste-newlines/: ticket-1.md  ticket-2.md  ticket-3.md
crates/harbor-config/: Cargo.toml
crates/harbor-config/src/: lib.rs
crates/harbor-gpu/: Cargo.toml
crates/harbor-gpu/src/: caps.rs  cursor.rs  decoration.rs  gpu.rs  lib.rs  runtime.rs  scrollbar.rs  text.rs
crates/harbor-parser/: Cargo.toml
crates/harbor-parser/src/: core.rs  lib.rs  params.rs  perform.rs
crates/harbor-pty/: Cargo.toml
crates/harbor-pty/src/: lib.rs  unix.rs  windows.rs
crates/harbor-render/: Cargo.toml
crates/harbor-render/src/: background.rs  cache.rs  caps.rs  cursor.rs  decoration.rs  font.rs  gpu.rs  lib.rs  metrics.rs  scrollbar.rs  selection.rs  solid.rs  text.rs
crates/harbor-render/src/gpu/: mod.rs  runtime.rs
crates/harbor-terminal/: Cargo.toml
crates/harbor-terminal/src/: damage.rs  lib.rs  normal_buf.rs  parser.rs  screen.rs  selection_model.rs  terminal_tests.rs
crates/harbor-terminal/src/parser/: handlers.rs  incremental_tests.rs  tests.rs
crates/harbor-terminal/src/screen/: tests.rs
crates/harbor-text/: Cargo.toml
crates/harbor-text/src/: atlas.rs  font.rs  lib.rs  metrics.rs
crates/harbor-types/: Cargo.toml
crates/harbor-types/src/: lib.rs
crates/harbor-ui/: Cargo.toml
crates/harbor-ui/src/: background.rs  button.rs  container.rs  custom_paint.rs  decoration.rs  dialog.rs  layout.rs  lib.rs  metrics.rs  primitives.rs  terminal.rs  text.rs  widget.rs
crates/harbor-ui/src/terminal/: background.rs  decoration.rs  metrics.rs  mod.rs  text.rs
crates/harbor-widget/: Cargo.toml
crates/harbor-widget/src/: fiber.rs  lib.rs  runtime.rs  signal.rs  text.rs  view.rs
crates/harbor-widget/src/input/: event.rs  event_ctx.rs  mod.rs  state.rs
crates/harbor-widget/src/layout/: align.rs  constraints.rs  geometry.rs  mod.rs
crates/harbor-widget/src/renderer/: mod.rs  quad.rs
crates/harbor-widget/src/scene/: mod.rs  primitive.rs
crates/harbor-widget/src/widgets/: align.rs  button.rs  column.rs  focus_scope.rs  mod.rs  padding.rs  row.rs  sized_box.rs  stack.rs
crates/harbor-widget/tests/: input_routing.rs  integration.rs
docs/: architecture-review.md  checklist.md  roadmap.md  widget-runtime-design.md
docs/adr/: 0001-multi-click-selection.md  0002-cjk-word-selection.md  0003-crate-workspace-split.md  0004-declarative-gpu-ui.md  0005-gpu-runtime-boundary.md  0006-unified-declarative-widget-runtime.md  0007-renderer-owned-ui-boundary.md
docs/agents/: domain.md
docs/plans/: 2026-07-24-001-refactor-terminal-rendering-simplification-plan.md
docs/specs/: paste-newline-confirmation.md
src/: app.rs  background.rs  config.rs  cursor.rs  decoration.rs  event.rs  font.rs  gpu.rs  main.rs  mem_tracker.rs  metrics.rs  pty.rs  render.rs  renderer.rs  scrollbar.rs  selection.rs  terminal.rs  terminal_worker.rs  text.rs
src/app/: caps.rs  cursor.rs  input.rs  interaction.rs  keyboard.rs  paste_dialog.rs  scrollbar.rs  selection.rs  ui.rs
src/pty/: unix.rs  windows.rs
src/render/: background.rs  caps.rs  cursor.rs  decoration.rs  font.rs  gpu.rs  metrics.rs  mod.rs  scrollbar.rs  selection.rs  text.rs
src/terminal/: damage.rs  normal_buf.rs  parser.rs  screen.rs  tests.rs  text.rs
src/terminal/parser/: core.rs  handlers.rs  incremental_tests.rs  mod.rs  params.rs  perform.rs  tests.rs
src/terminal/screen/: tests.rs
tests/: harbor_e2e_test.cmd  harbor_e2e_test.ps1  harbor_e2e_test.sh
