[package]
name = "harbor"
version = "0.1.0"
edition = "2024"

[dependencies]
# error handle
anyhow = "1.0"
thiserror = "2.0"
unicode-width = "0.2"

# basic data struct
hashbrown = "0.17"

# sync
parking_lot = "0.12"

# async poll
pollster = "0.4"

# windows deps
wgpu = "30.0"
winit = "0.30"

# logger
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# vertex casting
bytemuck = { version = "1.21", features = ["derive"] }

# system font rasterization
fontdb = "0.23.0"
fontdue = "0.9"

[target."cfg(windows)".dependencies]
windows = {
  version = "0.62",
  features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
  ]
}
