[package]
name = "harbor"
version = "0.1.0"
edition = "2024"

[dependencies]
# error handle
anyhow = "1.0"
thiserror = "2.0"
unicode-width = "0.2"
bitvec = "1.0"

# basic lib
dirs = "6.0"
hashbrown = "0.17"

# sync
parking_lot = "0.12"

# async poll
pollster = "0.4"

# windows deps
wgpu = "30.0"
winit = { version = "0.30", features = ["rwh_06"] }

# logger
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {
  version = "0.3",
  features = ["env-filter", "fmt", "json"]
}

# vertex casting
bytemuck = { version = "1.21", features = ["derive"] }

# system font rasterization
fontdb = "0.23.0"
fontdue = "0.9"

# clipboard
arboard = "3.6"

[target."cfg(windows)".dependencies]
windows = {
  version = "0.62",
  features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
  ]
}
