[package]
name = "harbor-render"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
harbor-gpu = { workspace = true }
harbor-types = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
