[package]
name = "harbor-render"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true }
fontdb = { workspace = true }
fontdue = { workspace = true }
harbor-config = { workspace = true }
anyhow = { workspace = true }
harbor-types = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
