[package]
name = "harbor-render"
version = "0.1.0"
edition = "2024"

[features]
default = []
backend-dx12 = []
backend-vulkan = []

[dependencies]
harbor-types = { workspace = true }
harbor-config = { workspace = true }
harbor-terminal = { workspace = true }
harbor-pty = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
bytemuck = { workspace = true }
fontdb = { workspace = true }
fontdue = { workspace = true }
hashbrown = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
