[package]
name = "harbor-text"
version = "0.1.0"
edition = "2024"

[dependencies]
harbor-types = { workspace = true }
harbor-config = { workspace = true }
anyhow = { workspace = true }
fontdb = { workspace = true }
fontdue = { workspace = true }
hashbrown = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
unicode-width = { workspace = true }
