[package]
name = "harbor-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
harbor-gpu = { workspace = true }
harbor-types = { workspace = true }
harbor-pty = { workspace = true }
harbor-terminal = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
