[package]
name = "harbor-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
harbor-config = { workspace = true }
harbor-render = { workspace = true }
harbor-terminal = { workspace = true }
harbor-types = { workspace = true }
hashbrown = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }
winit = { workspace = true }
